--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
 }
 
 .profile-image {
@@ -27,6 +29,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  align-items: left;
+  padding-left: 10px;
 }
 
 button {
@@ -45,4 +49,12 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+}
+
+.right {
+  display: flex;
+  padding: 8px;
+  margin-left: auto;
 }
